charts/mediaserver/kapowarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kapowarr
  labels:
    app: kapowarr
spec:
  type: ClusterIP
  ports:
    - port: 5656
      targetPort: 5656
      protocol: TCP
      name: http
  selector:
    app: kapowarr
