charts/mediaserver/kapowarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kapowarr
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - kapowarr.int.imdevinc.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kapowarr
      namespace: mediaserver
      port: 5656
